kubefiles/myboot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myremotedebug
  labels:
    app: myremotedebug    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: myremotedebug
  type: LoadBalancer
