kubefiles/myremotedebug-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: 2019-08-20T13:27:50Z
  labels:
    app: myremotedebug
  name: myremotedebug
  resourceVersion: "83849"
  selfLink: /apis/route.openshift.io/v1/namespaces/remote-demo/routes/myremotedebug
  uid: 4e5fb05b-c34e-11e9-ae3d-080027dffa93
spec:
  host: myremotedebug-remote-demo.192.168.99.102.nip.io
  port:
    targetPort: http
  to:
    kind: Service
    name: myremotedebug
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2019-08-20T13:27:50Z
      status: "True"
      type: Admitted
    host: myremotedebug-remote-demo.192.168.99.102.nip.io
    routerName: router
    wildcardPolicy: None
